chore(rewrite): update screenreader and global typos

--- a/src/patternfly/components/CalendarMonth/calendar-month-day.hbs
+++ b/src/patternfly/components/CalendarMonth/calendar-month-day.hbs
@@ -2,6 +2,6 @@
   {{#if calendar-month-day--attribute}}
     {{{calendar-month-day--attribute}}}
   {{/if}}>
-  <span class="pf-screen-reader">{{calendar-month-day--day}}</span>
+  <span class="{{pfv 'unset-prefix'}}screen-reader">{{calendar-month-day--day}}</span>
   <span aria-hidden="true">{{calendar-month-day--label}}</span>
 </th>
