--- a/src/patternfly/components/Menu/menu-item-external-icon.hbs
+++ b/src/patternfly/components/Menu/menu-item-external-icon.hbs
@@ -4,5 +4,5 @@
   {{/if}}>
   <i class="fas fa-external-link-alt" aria-hidden="true"></i>
 </span>
-<span class="pf-screen-reader">(opens new window)</span>
+<span class="{{pfv 'unset-prefix'}}screen-reader">(opens new window)</span>
 
