chore(icon): update icon to behave as inline by default, cleanup vars

--- a/src/patternfly/components/Icon/icon.scss
+++ b/src/patternfly/components/Icon/icon.scss
@@ -1,40 +1,39 @@
 // @debug $icon; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
 .#{$icon} {
-  // Size
-  --#{$icon}--Width: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--Height: var(--#{$pf-global}--icon--FontSize--md);
-
-  // When inline, use the parent's size
+  // Sizes
+  --#{$icon}--Width: 1em;
+  --#{$icon}--Height: 1em;
+  --#{$icon}--m-sm--Width: var(--#{$pf-global}--icon--FontSize--sm);
+  --#{$icon}--m-sm--Height: var(--#{$pf-global}--icon--FontSize--sm);
+  --#{$icon}--m-md--Width: var(--#{$pf-global}--icon--FontSize--md);
+  --#{$icon}--m-md--Height: var(--#{$pf-global}--icon--FontSize--md);
+  --#{$icon}--m-lg--Width: var(--#{$pf-global}--icon--FontSize--lg);
+  --#{$icon}--m-lg--Height: var(--#{$pf-global}--icon--FontSize--lg);
+  --#{$icon}--m-xl--Width: var(--#{$pf-global}--icon--FontSize--xl);
+  --#{$icon}--m-xl--Height: var(--#{$pf-global}--icon--FontSize--xl);
   --#{$icon}--m-inline--Width: 1em;
   --#{$icon}--m-inline--Height: 1em;
 
-  // Size modifiers
-  --#{$icon}--m-sm--Width: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$icon}--m-md--Width: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--m-lg--Width: var(--#{$pf-global}--icon--FontSize--lg);
-  --#{$icon}--m-xl--Width: var(--#{$pf-global}--icon--FontSize--xl);
-  --#{$icon}--m-sm--Height: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$icon}--m-md--Height: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--m-lg--Height: var(--#{$pf-global}--icon--FontSize--lg);
-  --#{$icon}--m-xl--Height: var(--#{$pf-global}--icon--FontSize--xl);
+  // Content
+  --#{$icon}__content--svg--VerticalAlign: -.125em;
 
-  // Content variables
-  --#{$icon}__content--Color: var(--#{$pf-global}--icon--Color--dark);
-
-  // Content status
+  // Content color
+  --#{$icon}__content--Color: initial;
   --#{$icon}__content--m-danger--Color: var(--#{$pf-global}--danger-color--100);
   --#{$icon}__content--m-warning--Color: var(--#{$pf-global}--warning-color--100);
   --#{$icon}__content--m-success--Color: var(--#{$pf-global}--success-color--100);
   --#{$icon}__content--m-info--Color: var(--#{$pf-global}--info-color--100);
   --#{$icon}__content--m-custom--Color: var(--#{$pf-global}--custom-color--100);
-  --#{$icon}__content--FontSize: var(--#{$pf-global}--icon--FontSize--md);
+  --#{$icon}--m-inline__content--Color: initial;
+
+  // Content sizes
+  --#{$icon}__content--FontSize: 1em;
+  --#{$icon}--m-sm__content--FontSize: var(--#{$pf-global}--icon--FontSize--sm);
+  --#{$icon}--m-md__content--FontSize: var(--#{$pf-global}--icon--FontSize--md);
+  --#{$icon}--m-lg__content--FontSize: var(--#{$pf-global}--icon--FontSize--lg);
+  --#{$icon}--m-xl__content--FontSize: var(--#{$pf-global}--icon--FontSize--xl);
   --#{$icon}--m-inline__content--FontSize: 1em;
-  --#{$icon}__content--svg--VerticalAlign: -.125em;
-  --#{$icon}--m-sm--content--FontSize: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$icon}--m-md--content--FontSize: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$icon}--m-lg--content--FontSize: var(--#{$pf-global}--icon--FontSize--lg);
-  --#{$icon}--m-xl--content--FontSize: var(--#{$pf-global}--icon--FontSize--xl);
 
   position: relative;
   display: inline-flex;
@@ -48,7 +47,7 @@
     --#{$icon}--Width: var(--#{$icon}--m-inline--Width);
     --#{$icon}--Height: var(--#{$icon}--m-inline--Height);
     --#{$icon}__content--FontSize: var(--#{$icon}--m-inline__content--FontSize);
-    --#{$icon}__content--Color: currentcolor;
+    --#{$icon}__content--Color: var(--#{$icon}--m-inline__content--Color);
 
     line-height: 1;
 
@@ -61,25 +60,25 @@
   &.pf-m-sm {
     --#{$icon}--Width: var(--#{$icon}--m-sm--Width);
     --#{$icon}--Height: var(--#{$icon}--m-sm--Height);
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-sm--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-sm__content--FontSize);
   }
 
   &.pf-m-md {
     --#{$icon}--Width: var(--#{$icon}--m-md--Width);
     --#{$icon}--Height: var(--#{$icon}--m-md--Height);
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-md--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-md__content--FontSize);
   }
 
   &.pf-m-lg {
     --#{$icon}--Width: var(--#{$icon}--m-lg--Width);
     --#{$icon}--Height: var(--#{$icon}--m-lg--Height);
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-lg--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-lg__content--FontSize);
   }
 
   &.pf-m-xl {
     --#{$icon}--Width: var(--#{$icon}--m-xl--Width);
     --#{$icon}--Height: var(--#{$icon}--m-xl--Height);
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-xl--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-xl__content--FontSize);
   }
 
   &.pf-m-in-progress {
@@ -99,25 +98,25 @@
 
   // Size modifiers
   &.pf-m-sm {
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-sm--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-sm__content--FontSize);
   }
 
   &.pf-m-md {
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-md--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-md__content--FontSize);
   }
 
   &.pf-m-lg {
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-lg--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-lg__content--FontSize);
   }
 
   &.pf-m-xl {
-    --#{$icon}__content--FontSize: var(--#{$icon}--m-xl--content--FontSize);
+    --#{$icon}__content--FontSize: var(--#{$icon}--m-xl__content--FontSize);
   }
 }
 
 // Content element
 .#{$icon}__content {
-  color: var(--#{$icon}__content--Color);
+  color: var(--#{$icon}__content--Color, inherit);
   opacity: var(--#{$icon}__content--Opacity, 1);
 
   // Status modifiers
