chore(icons): update list, multiple file upload icon colors

--- a/src/patternfly/components/MultipleFileUpload/multiple-file-upload.scss
+++ b/src/patternfly/components/MultipleFileUpload/multiple-file-upload.scss
@@ -26,7 +26,7 @@
   --pf-c-multiple-file-upload__title--Gap: var(--pf-global--spacer--sm);
 
   // title icon
-  --pf-c-multiple-file-upload__title-icon--Color: var(--pf-global--Color--200);
+  --pf-c-multiple-file-upload__title-icon--Color: var(--pf-global--icon--Color--dark);
 
   // title text separator
   --pf-c-multiple-file-upload__title-text-separator--Display: block;
@@ -77,7 +77,7 @@
   --pf-c-multiple-file-upload__status-item--BorderColor: var(--pf-global--BorderColor--100);
 
   // status item icon
-  --pf-c-multiple-file-upload__status-item-icon--Color: var(--pf-global--Color--200);
+  --pf-c-multiple-file-upload__status-item-icon--Color: var(--pf-global--icon--Color--dark);
 
   // status item close
   --pf-c-multiple-file-upload__status-item-close--MarginTop: calc(var(--pf-global--spacer--form-element) * -1);
