--- a/src/patternfly/components/BackgroundImage/background-image.hbs
+++ b/src/patternfly/components/BackgroundImage/background-image.hbs
@@ -1,4 +1,5 @@
 <div class="{{pfv}}background-image{{#if background-image--modifier}} {{background-image--modifier}}{{/if}}"
+  style="--{{pfv}}background-image--BackgroundImage: {{ternary background-image--background-image background-image--background-image "url(/assets/images/pfbg-icon.svg)"}}"
   {{#if background-image--attribute}}
     {{{background-image--attribute}}}
   {{/if}}>
