--- a/src/patternfly/components/FormControl/themes/dark/form-control.scss
+++ b/src/patternfly/components/FormControl/themes/dark/form-control.scss
@@ -1,8 +1,8 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
-@mixin pf-v5-theme-dark-form-control() {
+@mixin pf-theme-dark-form-control() {
   .#{$form-control} {
-    --#{$form-control}__select--BackgroundUrl: #{pf-bg-svg($pf-v5-c-form-control__select--Coordinates, $pf-v5-c-form-control__select--ViewBox, $pf-v5-global--Color--100)};
+    // --#{$form-control}__select--BackgroundUrl: #{pf-bg-svg($pf-c-form-control__select--Coordinates, $pf-c-form-control__select--ViewBox, $pf-global--Color--100)};
     --#{$form-control}--BorderTopColor: transparent;
     --#{$form-control}--BorderRightColor: transparent;
     --#{$form-control}--BorderBottomColor: var(--#{$pf-global}--BorderColor--400);
