--- a/src/patternfly/components/FormControl/themes/dark/form-control.scss
+++ b/src/patternfly/components/FormControl/themes/dark/form-control.scss
@@ -2,7 +2,7 @@
 
 @mixin pf-theme-dark-form-control() {
   .#{$form-control} {
-    // --#{$form-control}__select--BackgroundUrl: #{pf-bg-svg($pf-c-form-control__select--Coordinates, $pf-c-form-control__select--ViewBox, $pf-global--Color--100)};
+    // --pf-c-form-control__select--BackgroundUrl: #{pf-bg-svg($pf-c-form-control__select--Coordinates, $pf-c-form-control__select--ViewBox, $pf-global--Color--100)};
     --#{$form-control}--BorderTopColor: transparent;
     --#{$form-control}--BorderRightColor: transparent;
     --#{$form-control}--BorderBottomColor: var(--#{$pf-global}--BorderColor--400);
