--- a/src/patternfly/components/Icon/icon-content.hbs
+++ b/src/patternfly/components/Icon/icon-content.hbs
@@ -1,4 +1,4 @@
-<span class="{{pfv 'unset-prefix'}}icon__content{{#if icon-content--modifier}} {{icon-content--modifier}}{{/if}}"
+<span class="{{pfv}}icon__content{{#if icon-content--modifier}} {{icon-content--modifier}}{{/if}}"
   {{#if icon-content--attribute}}
     {{{icon-content--attribute}}}
   {{/if}}>
