--- a/src/patternfly/components/Icon/icon-progress.hbs
+++ b/src/patternfly/components/Icon/icon-progress.hbs
@@ -1,4 +1,4 @@
-<span class="{{pfv 'unset-prefix'}}icon__progress{{#if icon-progress--modifier}} {{icon-progress--modifier}}{{/if}}"
+<span class="{{pfv}}icon__progress{{#if icon-progress--modifier}} {{icon-progress--modifier}}{{/if}}"
   {{#if icon-progress--attribute}}
     {{{icon-progress--attribute}}}
   {{/if}}>
