--- a/src/patternfly/components/Icon/icon.hbs
+++ b/src/patternfly/components/Icon/icon.hbs
@@ -1,4 +1,4 @@
-<span class="{{pfv 'unset-prefix'}}icon{{#if icon--modifier}} {{icon--modifier}}{{/if}}"
+<span class="{{pfv}}icon{{#if icon--modifier}} {{icon--modifier}}{{/if}}"
   {{#if icon--attribute}}
     {{{icon--attribute}}}
   {{/if}}>
