--- a/src/patternfly/components/ProgressStepper/progress-stepper.scss
+++ b/src/patternfly/components/ProgressStepper/progress-stepper.scss
@@ -354,7 +354,7 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
 
   // Align pficons with the font awesome icons
   // stylelint-disable
-  .pf-v5-icon {
+  .pf-v5-c-icon {
     margin-top: var(--#{$progress}-stepper__pficon--MarginTop);
   }
 
