--- a/src/patternfly/components/Table/table-column-help-action.hbs
+++ b/src/patternfly/components/Table/table-column-help-action.hbs
@@ -3,6 +3,6 @@
     {{{table-column-help-action--attribute}}}
   {{/if}}>
   {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="More info"'}}
-    <i class="pf-v5-icon pf-v5-icon-help" aria-hidden="true"></i>
+    <i class="pf-v5-c-icon pf-v5-c-icon-help" aria-hidden="true"></i>
   {{/button}}
 </span>
