--- a/src/patternfly/components/Alert/themes/dark/alert.scss
+++ b/src/patternfly/components/Alert/themes/dark/alert.scss
@@ -3,12 +3,12 @@
 @mixin pf-v5-theme-dark-alert() {
   .#{$alert} {
     --#{$alert}--BackgroundColor: var(--#{$pf-global}--palette--black-600);
-    --#{$alert}__title--Color: var(--#{$pf-global}--custom-color--200);
+    --#{$alert}--m-custom__title--Color: var(--#{$pf-global}--custom-color--200);
     --#{$alert}--m-success__title--Color: var(--#{$pf-global}--success-color--100);
     --#{$alert}--m-danger__title--Color: var(--#{$pf-global}--danger-color--100);
     --#{$alert}--m-warning__title--Color: var(--#{$pf-global}--warning-color--100);
     --#{$alert}--m-info__title--Color: var(--#{$pf-global}--info-color--100);
-    --#{$alert}--m-inline--BackgroundColor: var(--#{$pf-global}--palette--black-600);
+    --#{$alert}--m-inline--m-custom--BackgroundColor: var(--#{$pf-global}--palette--black-600);
     --#{$alert}--m-inline--m-success--BackgroundColor: var(--#{$pf-global}--palette--black-600);
     --#{$alert}--m-inline--m-danger--BackgroundColor: var(--#{$pf-global}--palette--black-600);
     --#{$alert}--m-inline--m-warning--BackgroundColor: var(--#{$pf-global}--palette--black-600);
