--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -142,6 +142,6 @@
 // stylelint-disable no-invalid-position-at-import-rule
 @import "./themes/dark/globals";
 
-@include pf-v5-theme-dark($pf-v5-theme-dark-prefix: ":root") {
+@include pf-v5-theme-dark {
   @include pf-v5-theme-dark-globals;
 }
