--- a/src/patternfly/base/_themes.scss
+++ b/src/patternfly/base/_themes.scss
@@ -1,4 +1,4 @@
-.pf-v5-t-dark {
+#{$pf-v5--theme-dark--placeholder--class} {
   @extend %pf-v5-t-dark;
 
   &.pf-m-transparent {
@@ -22,7 +22,7 @@
   }
 }
 
-.pf-v5-t-light {
+#{$pf-v5--theme-light--placeholder--class} {
   @extend %pf-v5-t-light;
 
   &.pf-m-transparent {
