--- a/src/patternfly/base/themes/dark/_variables.scss
+++ b/src/patternfly/base/themes/dark/_variables.scss
@@ -1,6 +1,6 @@
 @import "../../../sass-utilities/themes/dark/all";
 
-@mixin pf-v5-theme-dark-variables() {
+@mixin pf-v5-theme-dark-variables {
   // palette changes
   --#{$pf-global}--palette--black-50: #{$pf-v5-color-black-50};
   --#{$pf-global}--palette--black-100: #{$pf-v5-color-black-100};
