--- a/src/patternfly/components/MenuToggle/themes/dark/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/themes/dark/menu-toggle.scss
@@ -1,6 +1,6 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
-@mixin pf-v5-theme-dark-menu-toggle() {
+@mixin pf-theme-dark-menu-toggle() {
   .#{$menu-toggle} {
     --#{$menu-toggle}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
     --#{$menu-toggle}--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
@@ -15,6 +15,7 @@
     --#{$menu-toggle}--m-primary--BackgroundColor: var(--#{$pf-global}--primary-color--300);
     --#{$menu-toggle}--disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
     --#{$menu-toggle}--disabled--Color: var(--#{$pf-global}--disabled-color--300);
+    --#{$menu-toggle}--m-split-button--m-action--m-primary--child--BackgroundColor: var(--#{$pf-global}--primary-color--300);
     --#{$menu-toggle}--m-split-button--child--disabled--Color: var(--#{$pf-global}--disabled-color--300);
     --#{$menu-toggle}--m-split-button--child--disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
 
